# investment-portfolio

./: .gitignore  README.md  To-Dos.md  _quarto.yml  config.py  pyproject.toml  realized-unrealized-gains.md  requirements.txt
data/cache/: AMR-ADX.csv  ASM-ADX.csv  MULTIPLY-ADX.csv  SPY.csv  STIP.csv  VOO.csv  full_metadata.json  metadata.json
data/input/: exus_mkt_transactions.csv  us_mkt_transactions.csv
data/manual-source/: ALDAR.csv  IHC.csv  (+1 more)
docs/: Pareto-NBD-Model-WIP.qmd
notebooks/: Albin-Portfolio.qmd  main copy.ipynb  main-test.ipynb  main.ipynb  main_analysis_test.ipynb  stock-v-real-estate copy  stock-v-real-estate.ipynb  stock-v-real-estate.py  stock-v-real-estate.qmd  test.ipynb
src/: aggregate-data.ipynb  benchmark copy.py  benchmark-1.py  benchmark.py  brokerage_data.json  clean-pdf-statement.py  config.py  data_ingestion.py  data_providers.py  market_data.py  portfolio copy.py  portfolio-1.py  portfolio.py  portfolio1.py  process-statements.ipynb  process-statements.py  stock-v-real-estate.ipynb  stock-v-real-estate.qmd  stock-v-real-estate1.ipynb  symbols copy.py  symbols.py  transaction_processor.py
tools/: 0-clean-statements.py  1-statement-to-json.py  2-create-transaction-log.py  2a-test-transaction-log.py  3-fetch-UAE-market-data.py  4-update-exchange-name.py  5-test-transaction-log.py  create-transaction-log.py  fetch-UAE-market-data.ipynb  implementation-V1.ipynb  prepare-pdf-statements.py  statement-to-json.ipynb  statement-to-json.py  test-transaction-log.ipynb  test.py  transaction-log-exchange.ipynb  transaction-log-exchange.py
(+107 files in other folders)
