[project]
name = "investment-portfolio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "etfpy>=1.0.20",
    "ipykernel>=6.30.1",
    "matplotlib>=3.10.6",
    "numpy>=1.26.4",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.7",
    "plotly>=6.3.1",
    "pymupdf>=1.26.4",
    "quarto>=0.1.0",
    "scipy>=1.16.2",
    "yfinance>=0.2.66",
]
